Fix spacing on my songs view

--- a/src/components/mySongLibrary/MySongLibrary.scss
+++ b/src/components/mySongLibrary/MySongLibrary.scss
@@ -9,6 +9,7 @@
   gap: 25px;
   justify-items: stretch;
   padding: 0px 20px 20px 20px;
+  margin-top: 90px;
 }
 
 .my-library > * {
